@@ -1,6 +1,7 @@
 systemd-genie (1.37) buster bullseye bookworm sid focal bionic; urgency=medium
 
-        * Nothing yet.
+        * Reduced default systemd startup timeout to 60s.
+        * Added display of failed systemd units on timeout.
 
  -- Alistair Young <avatar@arkane-systems.net>  Sun, 14 Mar 2021 13:48:00 -0500
 
